--- a/v3.html
+++ b/v3.html
@@ -263,22 +263,8 @@
                       <!-- Medical Centres -->
                       <div class="listslide">
                           <div class="slidewrap slideinnr1">
-                              <svg version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-                                     width="25px" height="25px" viewBox="0 0 512 512"  xml:space="preserve">
-                                     <style type="text/css">
-                                    <![CDATA[
-                                       .st0{fill:#fff;}
-                                    ]]>
-                                    </style>
-                                 <g>
-                                    <path class="st0" d="M0,0v512h512V0H0z M464,464H307.891V332.422H204.109V464H48V48h416V464z"/>
-                                    <polygon class="st0" points="228.859,232.422 283.141,232.422 283.141,183.563 332,183.563 332,129.281 283.141,129.281 
-                                       283.141,80.422 228.859,80.422 228.859,129.281 180,129.281 180,183.563 228.859,183.563  "/>
-                                    <rect x="99.406" y="192.422" class="st0" width="40.063" height="72.828"/>
-                                    <rect x="99.406" y="363.594" class="st0" width="40.063" height="72.828"/>
-                                    <rect x="372.531" y="192.422" class="st0" width="40.063" height="72.828"/>
-                                    <rect x="372.531" y="363.594" class="st0" width="40.063" height="72.828"/>
-                                 </g>
+                              <svg fill="#fff" width="25px" height="25px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M0 26.016q0 2.496 1.76 4.224t4.256 1.76h20q2.464 0 4.224-1.76t1.76-4.224v-20q0-2.496-1.76-4.256t-4.224-1.76h-20q-2.496 0-4.256 1.76t-1.76 4.256v20zM4 26.016v-20q0-0.832 0.576-1.408t1.44-0.608h20q0.8 0 1.408 0.608t0.576 1.408v20q0 0.832-0.576 1.408t-1.408 0.576h-20q-0.832 0-1.44-0.576t-0.576-1.408zM8 16q0 0.832 0.576 1.44t1.44 0.576h4v4q0 0.832 0.576 1.408t1.408 0.576 1.408-0.576 0.608-1.408v-4h4q0.8 0 1.408-0.576t0.576-1.44-0.576-1.408-1.408-0.576h-4v-4q0-0.832-0.608-1.408t-1.408-0.608-1.408 0.608-0.576 1.408v4h-4q-0.832 0-1.44 0.576t-0.576 1.408z"></path>
                               </svg>
                               <select>
                                   <option value="MC">Medical Centres <span>(2)</span></option>
@@ -290,7 +276,9 @@
                       <!-- Transportation -->
                       <div class="listslide">
                           <div class="slidewrap">                              
-                              <svg width="25px" height="25px" viewBox="0 0 48 48" id="Layer_2" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg"><defs><style>.cls-1{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><rect class="cls-1" x="8.54" y="39.08" width="7.74" height="4.42"/><rect class="cls-1" x="31.72" y="39.08" width="7.74" height="4.42"/><path class="cls-1" d="M7.29,11h1.2v7.94a2.44,2.44,0,0,1-2.4-2.47V12.22A1.22,1.22,0,0,1,7.29,11Z"/><path class="cls-1" d="M40.71,11h-1.2v7.94a2.44,2.44,0,0,0,2.4-2.47V12.22A1.22,1.22,0,0,0,40.71,11Z"/><path class="cls-1" d="M24,4.5c-5.51,0-15.46.86-15.46,3.1V39.08H39.46V7.6C39.46,5.36,29.44,4.5,24,4.5Zm0,4.23q8.19,0,12.2,1.23a1,1,0,0,1,.67.92v17a1,1,0,0,1-1,1H12.14a1,1,0,0,1-1-1v-17a1,1,0,0,1,.67-.92q4-1.23,12.19-1.23ZM13.59,31.5a2.5,2.5,0,0,1,0,5h0A2.47,2.47,0,0,1,11.16,34h0A2.47,2.47,0,0,1,13.59,31.5Zm20.87,0a2.5,2.5,0,0,1,0,5h0A2.47,2.47,0,0,1,32,34h0A2.47,2.47,0,0,1,34.46,31.5Z"/></svg>
+                              <svg fill="#fff" width="25px" height="25px" viewBox="0 -3.6 30.859 30.859" xmlns="http://www.w3.org/2000/svg">
+                                <path id="Path_1" data-name="Path 1" d="M141.314,136.63l1.055-.085a.568.568,0,0,0,.52-.61l-.129-1.58a.565.565,0,0,0-.609-.519l-2.354,0-2.549-5.724a2.074,2.074,0,0,0-2.032-1.116h-15a2.084,2.084,0,0,0-2.036,1.116l-2.546,5.724-2.354,0a.568.568,0,0,0-.61.519l-.127,1.58a.567.567,0,0,0,.519.61l1.055.085a10.131,10.131,0,0,0-1.833,5.852l.238,3.025a1.649,1.649,0,0,0,.9,1.355v1.6c.1,2.185.788,2.185,2.319,2.185s2.32,0,2.423-2.185v-1.417l9.551,0,9.468,0v1.415c.1,2.185.787,2.185,2.319,2.185s2.32,0,2.422-2.185v-1.6a1.734,1.734,0,0,0,.978-1.355l.242-3.025A10.131,10.131,0,0,0,141.314,136.63ZM122.257,143.5a.568.568,0,0,1-.566.567h-5.577a.567.567,0,0,1-.568-.567v-2.04a.565.565,0,0,1,.568-.567l5.577.453a.568.568,0,0,1,.566.566Zm-4.9-7.98,2.742-6.307h15.232l2.741,6.307H117.359Zm22.53,7.98a.567.567,0,0,1-.567.567h-5.577a.568.568,0,0,1-.567-.567v-1.588a.569.569,0,0,1,.567-.566l5.577-.453a.565.565,0,0,1,.567.567Z" transform="translate(-112.289 -126.994)"/>
+                              </svg>
                               <select>
                                   <option value="TRN">Transportation <span>(2)</span></option>
                                   <option value="PIA" lat="18.5793" lang="73.9106" proaddress="Lohegaon, Pune, Maharashtra 411032">Pune International Airport</option>
@@ -301,9 +289,15 @@
                       <!-- Education Institutes -->
                       <div class="listslide">
                           <div class="slidewrap">
-                           <svg fill="#fff" width="25px" height="25px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                              <path d="M30 21.25h-6.25v-8.957l5.877 3.358c0.107 0.062 0.236 0.098 0.373 0.099h0c0.414-0.001 0.749-0.336 0.749-0.751 0-0.277-0.15-0.519-0.373-0.649l-0.004-0.002-13.623-7.784v-0.552c0.172 0.016 0.35 0.068 0.519 0.068 0.004 0 0.010 0 0.015 0 0.475 0 0.934-0.067 1.368-0.193l-0.035 0.009c0.323-0.063 0.693-0.099 1.073-0.099 0.392 0 0.775 0.039 1.146 0.112l-0.037-0.006c0.039 0.007 0.083 0.012 0.129 0.012 0.184 0 0.352-0.068 0.479-0.181l-0.001 0.001c0.161-0.139 0.263-0.343 0.264-0.571v-2.812c0 0 0-0 0-0 0-0.355-0.247-0.653-0.579-0.73l-0.005-0.001c-0.419-0.111-0.9-0.176-1.396-0.176-0.5 0-0.985 0.065-1.446 0.187l0.039-0.009c-0.288 0.067-0.618 0.105-0.958 0.105-0.231 0-0.457-0.018-0.678-0.052l0.025 0.003c-0.122-0.256-0.378-0.43-0.676-0.43-0.412 0-0.746 0.334-0.746 0.746 0 0.001 0 0.003 0 0.004v-0 4.565l-13.622 7.784c-0.227 0.132-0.378 0.374-0.378 0.651 0 0.414 0.336 0.75 0.75 0.75 0.137 0 0.265-0.037 0.376-0.101l-0.004 0.002 5.878-3.359v8.957h-6.25c-0.414 0-0.75 0.336-0.75 0.75v0 8c0 0.414 0.336 0.75 0.75 0.75h28c0.414-0 0.75-0.336 0.75-0.75v0-8c-0-0.414-0.336-0.75-0.75-0.75v0zM18.658 3.075c0.298-0.082 0.64-0.13 0.993-0.13 0.183 0 0.363 0.013 0.539 0.037l-0.020-0.002v1.339c-0.16-0.013-0.345-0.021-0.533-0.021-0.489 0-0.966 0.052-1.425 0.151l0.044-0.008c-0.304 0.088-0.653 0.139-1.014 0.139-0.174 0-0.344-0.012-0.512-0.034l0.020 0.002v-1.323c0.15 0.014 0.325 0.021 0.502 0.021 0.499 0 0.984-0.062 1.447-0.18l-0.041 0.009zM2.75 22.75h5.5v6.5h-5.5zM9.75 22v-10.564l6.25-3.571 6.25 3.572v17.814h-2.5v-5.25c-0-0.414-0.336-0.75-0.75-0.75h-6c-0.414 0-0.75 0.336-0.75 0.75v0 5.25h-2.5zM13.75 29.25v-4.5h4.5v4.5zM29.25 29.25h-5.5v-6.5h5.5zM16 19.75c2.071 0 3.75-1.679 3.75-3.75s-1.679-3.75-3.75-3.75c-2.071 0-3.75 1.679-3.75 3.75v0c0.002 2.070 1.68 3.748 3.75 3.75h0zM16 13.75c1.243 0 2.25 1.007 2.25 2.25s-1.007 2.25-2.25 2.25c-1.243 0-2.25-1.007-2.25-2.25v0c0.002-1.242 1.008-2.248 2.25-2.25h0z"></path>
-                              </svg>
+                           <svg width="25px" height="25px" version="1.1" id="Icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                               viewBox="0 0 32 32" xml:space="preserve">
+                           <style type="text/css">
+                              .st0{fill:none;stroke:#fff;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
+                           </style>
+                           <polygon class="st0" points="16,4 1,12 16,20 31,12 "/>
+                           <path class="st0" d="M7,15.2V22c0,2.2,4,5,9,5c5,0,9-2.8,9-5v-6.8"/>
+                           <line class="st0" x1="31" y1="12" x2="31" y2="25"/>
+                           </svg>
                               <select>
                                   <option value="EI">Education Institutes <span>(2)</span></option>
                                   <option value="LIS" lat="18.5820" lang="73.9865" proaddress="Wagholi, Pune, Maharashtra 412207">The Lexicon International School, Wagholi</option>
@@ -314,20 +308,9 @@
                       <!-- Banks & ATM -->
                       <div class="listslide">
                           <div class="slidewrap">
-                           <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-                               width="25px" height="25px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
-                           <g>
-                              <path fill="#fff" d="M60,58c0-2.209-1.791-4-4-4h-2V25h6c1.795,0,3.369-1.194,3.852-2.922c0.484-1.728-0.242-3.566-1.775-4.497
-                                 l-28-17C33.439,0.193,32.719,0,32,0s-1.438,0.193-2.076,0.581l-28,17c-1.533,0.931-2.26,2.77-1.775,4.497
-                                 C0.632,23.806,2.207,25,4,25h6v29H8c-2.209,0-4,1.791-4,4c-2.209,0-4,1.791-4,4v2h64v-2C64,59.791,62.209,58,60,58z M52,54h-4V25h4
-                                 V54z M18,25h4v29h-4V25z M24,25h4v29h-4V25z M30,25h4v29h-4V25z M36,25h4v29h-4V25z M42,25h4v29h-4V25z M4,23
-                                 c-0.893,0-1.685-0.601-1.926-1.462c-0.241-0.859,0.124-1.784,0.888-2.247l28-17.001C31.275,2.1,31.635,2,32,2
-                                 c0.367,0,0.725,0.1,1.039,0.291l28,17c0.764,0.463,1.129,1.388,0.887,2.248C61.686,22.399,60.893,23,60,23H4z M12,25h4v29h-4V25z
-                                  M8,56h48c1.105,0,2,0.896,2,2H6C6,56.896,6.896,56,8,56z M2,62c0-1.104,0.896-2,2-2h56c1.105,0,2,0.896,2,2H2z"/>
-                              <path fill="#fff" d="M32,9c-2.762,0-5,2.238-5,5s2.238,5,5,5s5-2.238,5-5S34.762,9,32,9z M32,17c-1.656,0-3-1.343-3-3
-                                 s1.344-3,3-3c1.658,0,3,1.343,3,3S33.658,17,32,17z"/>
-                           </g>
-                           </svg>
+                           <svg width="25px" height="25px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                 <path d="M3 21.0001H21M4 18.0001H20M6 18.0001V13.0001M10 18.0001V13.0001M14 18.0001V13.0001M18 18.0001V13.0001M12 7.00695L12.0074 7.00022M21 10.0001L14.126 3.88986C13.3737 3.2212 12.9976 2.88688 12.5732 2.75991C12.1992 2.64806 11.8008 2.64806 11.4268 2.75991C11.0024 2.88688 10.6263 3.2212 9.87404 3.88986L3 10.0001H21Z" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                 </svg>
                               <select>
                                   <option value="BA">Banks & ATM <span>(2)</span></option>
                                   <option value="SBI" lat="18.548401" lang="73.904748" proaddress="Kalyani Nagar, Pune, Maharashtra 411006">SBI ATM</option>
@@ -339,14 +322,17 @@
                       <div class="listslide">
                           <div class="slidewrap">
                            <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-                                  width="25px" height="25px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
-                              <path fill="#fff" d="M60,13H48V4c0-2.211-1.789-4-4-4H20c-2.211,0-4,1.789-4,4v9H4c-2.211,0-4,1.789-4,4v43c0,2.211,1.789,4,4,4
-                                 h56c2.211,0,4-1.789,4-4V17C64,14.789,62.211,13,60,13z M18,4c0-1.104,0.896-2,2-2h24c1.104,0,2,0.896,2,2v9h-2V5
-                                 c0-0.553-0.447-1-1-1H21c-0.553,0-1,0.447-1,1v8h-2V4z M42,6v7H22V6H42z M62,60c0,1.104-0.896,2-2,2H4c-1.104,0-2-0.896-2-2V42h10v5
-                                 c0,0.553,0.447,1,1,1h6c0.553,0,1-0.447,1-1v-5h24v5c0,0.553,0.447,1,1,1h6c0.553,0,1-0.447,1-1v-5h10V60z M14,46V36h4v10H14z
-                                  M46,46V36h4v10H46z M62,40H52v-5c0-0.553-0.447-1-1-1h-6c-0.553,0-1,0.447-1,1v5H20v-5c0-0.553-0.447-1-1-1h-6
-                                 c-0.553,0-1,0.447-1,1v5H2V17c0-1.104,0.896-2,2-2h56c1.104,0,2,0.896,2,2V40z"/>
-                              </svg>
+                               width="25px" height="25px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+                           <g>
+                              <rect x="14" y="36" fill="#fff" width="4" height="10"/>
+                              <path fill="#fff" d="M52,47c0,0.553-0.447,1-1,1h-6c-0.553,0-1-0.447-1-1v-5H20v5c0,0.553-0.447,1-1,1h-6c-0.553,0-1-0.447-1-1
+                                 v-5H0v18c0,2.211,1.789,4,4,4h56c2.211,0,4-1.789,4-4V42H52V47z"/>
+                              <rect x="46" y="36" fill="#fff" width="4" height="10"/>
+                              <path fill="#fff" d="M60,13H48V4c0-2.211-1.789-4-4-4H20c-2.211,0-4,1.789-4,4v9H4c-2.211,0-4,1.789-4,4v23h12v-5
+                                 c0-0.553,0.447-1,1-1h6c0.553,0,1,0.447,1,1v5h24v-5c0-0.553,0.447-1,1-1h6c0.553,0,1,0.447,1,1v5h12V17C64,14.789,62.211,13,60,13
+                                 z M42,13H22V6h20V13z"/>
+                           </g>
+                           </svg>
                               <select>
                                   <option value="BH">Business Hubs <span>(2)</span></option>
                                   <option value="EIP" lat="18.5515" lang="73.9357" proaddress="Kharadi, Pune, Maharashtra 411014">EON IT Park</option>
@@ -372,17 +358,16 @@
                       <!-- Fine Dining -->
                       <div class="listslide">
                           <div class="slidewrap">
-                           <svg width="25px" height="25px" fill="#ffff" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-                                  viewBox="0 0 32 32" xml:space="preserve">
-                              <path id="dining_1_" d="M23,31.36h-3c-0.199,0-0.36-0.161-0.36-0.36V1c0-0.199,0.161-0.36,0.36-0.36h2c1.853,0,3.36,1.507,3.36,3.36
-                                 v12c0,0.199-0.161,0.36-0.36,0.36h-1.64V31C23.36,31.199,23.199,31.36,23,31.36z M20.36,30.64h2.279V16
-                                 c0-0.199,0.161-0.36,0.36-0.36h1.64V4c0-1.456-1.184-2.64-2.64-2.64h-1.64L20.36,30.64L20.36,30.64z M12,31.36H9
-                                 c-0.199,0-0.36-0.161-0.36-0.36V13.36H8c-1.301,0-2.36-1.059-2.36-2.36V1h0.72v10c0,0.904,0.736,1.64,1.64,1.64h1
-                                 c0.199,0,0.36,0.161,0.36,0.36v17.64h2.28V13c0-0.199,0.161-0.36,0.36-0.36h1c0.904,0,1.64-0.736,1.64-1.64V1h0.72v10
-                                 c0,1.301-1.059,2.36-2.36,2.36h-0.64V31C12.36,31.199,12.199,31.36,12,31.36z M12.36,9h-0.72V1h0.72V9z M9.36,9H8.64V1h0.72
-                                 C9.36,1,9.36,9,9.36,9z"/>
-                              <rect id="_Transparent_Rectangle" style="fill:none;" width="32" height="32"/>
-                              </svg>
+                           <svg width="25px" height="25px"  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                               viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+                           <line fill="none" stroke="#fff" stroke-width="2" stroke-miterlimit="10" x1="5" y1="27" x2="13.5" y2="18.5"/>
+                           <line fill="none" stroke="#fff" stroke-width="2" stroke-miterlimit="10" x1="16" y1="16" x2="25.2" y2="6.8"/>
+                           <line fill="none" stroke="#fff" stroke-width="2" stroke-miterlimit="10" x1="27" y1="27" x2="14" y2="14"/>
+                           <path fill="none" stroke="#fff" stroke-width="2" stroke-miterlimit="10" d="M17.9,17.9l-2.5,2.5l-8.9-8.9c-1.4-1.4-1.4-3.6,0-5
+                              l0,0L17.9,17.9z"/>
+                           <path fill="none" stroke="#fff" stroke-width="2" stroke-miterlimit="10" d="M27.3,8.9l-4.6,4.6c-0.8,0.8-2,0.8-2.8,0l-1.4-1.4
+                              c-0.8-0.8-0.8-2,0-2.8l4.6-4.6"/>
+                           </svg>
                               <select>
                                   <option value="FD">Fine Dining <span>(2)</span></option>
                                   <option value="TFW" lat="18.5396" lang="73.9028" proaddress="Commercial 3, Nirvana, North Avenue, Near Jogger's Park, Kalyani Nagar, Pune, Maharashtra 411006">The Flour Works</option>
