--- a/v3.html
+++ b/v3.html
@@ -2561,6 +2561,11 @@ header ul li a.active {
     max-width: 1100px;
     margin: 0 auto;
 }
+@media(max-width: 500px) {
+   .listslide .slidewrap svg {
+    margin-right: 10px;
+   }
+}
 </style>
 </body>
 </html>
