--- a/v3.html
+++ b/v3.html
@@ -2565,6 +2565,11 @@ header ul li a.active {
    .listslide .slidewrap svg {
     margin-right: 10px;
    }
+   .locationfindersec h2.js-t-animation.pt-120.s\:pt-0.pb-10.text-50.s\:text-80.font-heading.leading-none.tracking-\[-0\.03em\].max-w-\[30rem\].s\:max-w-full .line {
+        text-align: center !important;
+        font-size: 30px;
+        line-height: 1.3;
+    }
 }
 </style>
       <script>
